--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,12 @@
 body {
     font-family: "Roboto" sans-serif ;
-    color: #ffffff;
+   background-color: #F4F4FD;
 
 }
-a address {
-    text-decoration: none;
+address {
+    font-style: normal;
 }
-ul ol {
-    list-style-type: none;
-}
+
 button {
     cursor: pointer;
 }
