--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body {
     font-family: "Roboto", sans-serif ;
-   background-color: #ffffff;
+   background-color: #FFFFFF;
+   color: #434455;
 
 }
 address {
@@ -22,7 +23,7 @@ button {
     font-family: "Raleway", sans-serif;
 font-weight: 700;
 font-size: 18px;
-line-height: 1.16667;
+line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #4d5ae5;
@@ -42,6 +43,12 @@ font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: #2e2f42;
+}
+.header-item:hover {
+color: #404bbf;
+}
+.header-item :focus {
+    color: #404bbf;
 }
 .header-address {
 font-weight: 400;
@@ -92,7 +99,7 @@ color: #434455;
 background: #fff;
 }
 .hero-photo {
-    background: url("path_to_image");
+  
 }
 .hero-subtitle {
 font-weight: 500;
@@ -150,7 +157,6 @@ color: #4d5ae5;
 .footer-logo {
 font-weight: 700;
 font-size: 18px;
-line-height: 1.16667;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #f4f4fd;
