--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 color: #2e2f42;
 }
-.header-item:hover {
+.header-item :hover {
 color: #404bbf;
 }
 .header-item :focus {
@@ -63,12 +63,12 @@ color: #434455;
 .box-title {
 font-weight: 700;
 font-size: 56px;
-line-height: 1.07143;
+line-height: 1.07;
 letter-spacing: 0.02em;
 text-align: center;
 color: #fff;
 }
-.box-button {
+.box-btn {
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 background: #4d5ae5;
 font-weight: 500;
@@ -123,7 +123,7 @@ color: #434455;
 .portfolio-title {
 font-weight: 700;
 font-size: 36px;
-line-height: 1.11111;
+line-height: 1.1;
 letter-spacing: 0.02em;
 text-align: center;
 color: #2e2f42;
@@ -149,7 +149,7 @@ color: #2e2f42;
     font-family: "Raleway", sans-serif;
 font-weight: 700;
 font-size: 18px;
-line-height: 1.16667;
+line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #4d5ae5;
