--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,12 @@ line-height: 1.5;
 letter-spacing: 0.04em;
 color: #fff;
 }
+.box-btn:hover {
+    background-color: #404BBF;
+}
+.box-btn:focus {
+background-color: #404BBF;
+}
 .information-title {
     font-weight: 500;
     font-size: 20px;
@@ -98,8 +104,14 @@ color: #434455;
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 background: #fff;
 }
-.hero-photo {
-  
+.hero-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11111;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+
 }
 .hero-subtitle {
 font-weight: 500;
@@ -123,10 +135,11 @@ color: #434455;
 .portfolio-title {
 font-weight: 700;
 font-size: 36px;
-line-height: 1.1;
+line-height: 1.11;
 letter-spacing: 0.02em;
 text-align: center;
 color: #2e2f42;
+text-transform: capitalize;
 }
 .portfolio-subtitle {
     font-weight: 500;
