--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ letter-spacing: 0.02em;
 color: #2e2f42;
 }
 .header-item :hover, .header-item :focus {
-color: #2e2f42;
+color: #404bbf;
 }
 .header-address-item {
 font-weight: 400;
@@ -55,7 +55,7 @@ letter-spacing: 0.02em;
 color: #434455;
 }
 .address-link:hover, .address-link:focus {
-    color: #434455;
+    color: #404bbf;
 }
 .section-box {
     background-color: #2E2F42;
