--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #2e2f42;
 }
-.header-item {
+.header-item-link {
 font-weight: 500;
 font-size: 16px;
 line-height: 1.5;
@@ -47,7 +47,7 @@ color: #2e2f42;
 .header-item :hover, .header-item :focus {
 color: #404bbf;
 }
-.header-address-item {
+.address-link {
 font-weight: 400;
 font-size: 16px;
 line-height: 1.5;
